--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~8.0.3",
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
+    "express": "^4.17.1",
     "mongoose": "^5.6.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
