--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "start-dev": "ng serve --proxy-config proxy.conf.json",
     "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
@@ -21,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "express": "^4.17.1",
+    "mongo-oplog": "^2.1.4",
     "mongoose": "^5.6.11",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
