--- a/package.json
+++ b/package.json
@@ -13,26 +13,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.3",
-    "@angular/common": "~8.0.3",
-    "@angular/compiler": "~8.0.3",
-    "@angular/core": "~8.0.3",
-    "@angular/forms": "~8.0.3",
-    "@angular/platform-browser": "~8.0.3",
-    "@angular/platform-browser-dynamic": "~8.0.3",
-    "@angular/router": "~8.0.3",
+    "@angular/animations": "^8.2.6",
+    "@angular/common": "^8.2.6",
+    "@angular/compiler": "^8.2.6",
+    "@angular/core": "^8.2.6",
+    "@angular/forms": "^8.2.6",
+    "@angular/platform-browser": "^8.2.6",
+    "@angular/platform-browser-dynamic": "^8.2.6",
+    "@angular/router": "^8.2.6",
     "express": "^4.17.1",
     "mongo-oplog": "^2.1.4",
-    "mongoose": "^5.6.11",
-    "rxjs": "~6.4.0",
+    "mongoose": "^5.7.0",
+    "reinstall": "^2.0.0",
+    "rxjs": "^6.5.3",
     "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.6",
-    "@angular/cli": "^8.0.6",
-    "@angular/compiler-cli": "^8.0.3",
-    "@angular/language-service": "~8.0.3",
+    "@angular-devkit/build-angular": "^0.803.4",
+    "@angular/cli": "^8.3.4",
+    "@angular/compiler-cli": "^8.2.6",
+    "@angular/language-service": "^8.2.6",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
