--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.6",
+    "@angular/cli": "^8.3.4",
+    "@angular/compiler-cli": "^8.2.6",
     "@angular/common": "^8.2.6",
     "@angular/compiler": "^8.2.6",
     "@angular/core": "^8.2.6",
@@ -21,6 +23,7 @@
     "@angular/platform-browser": "^8.2.6",
     "@angular/platform-browser-dynamic": "^8.2.6",
     "@angular/router": "^8.2.6",
+    "core-js": "^3.2.1",
     "express": "^4.17.1",
     "mongo-oplog": "^2.1.4",
     "mongoose": "^5.7.0",
