--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "@angular/animations": "^8.2.6",
     "@angular/cli": "^8.3.4",
-    "@angular/compiler-cli": "^8.2.6",
     "@angular/common": "^8.2.6",
     "@angular/compiler": "^8.2.6",
+    "@angular/compiler-cli": "^8.2.6",
     "@angular/core": "^8.2.6",
     "@angular/forms": "^8.2.6",
     "@angular/platform-browser": "^8.2.6",
@@ -26,6 +26,7 @@
     "core-js": "^3.2.1",
     "express": "^4.17.1",
     "mongo-oplog": "^2.1.4",
+    "mongodb": "^3.3.3",
     "mongoose": "^5.7.0",
     "reinstall": "^2.0.0",
     "rxjs": "^6.5.3",
